syntax = "proto3";

option csharp_namespace = "Didar.Packaging.Grpc";

package greet;


service PackagingProtoService {
 
  rpc HasUserAccessPerRole (UserRequest) returns (AccessStatusResponse);
}

message UserRequest {
  string nationalCode = 1;
  string methodName = 2;
}

message AccessStatusResponse {
  bool hasAccess = 1;
}
